--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -11,6 +11,7 @@ body {
   font-family: "Manrope", sans-serif;
   background-color: #191b1c;
   background-color: #121223;
+  /* background-color: #191b1c; */
 }
 
 a {
